assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600;700;800;900&family=Work+Sans:wght@300;400;500&display=swap');

/* Add a smooth scrolling effect to the document */
html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none; /* Remove lines on social media icons */
    color: #fafafa; /* Overwrites bounce arrow color */
}

/* The Overlay (background) */
.overlay {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 2; /* Sit on top */
    top: 0;
    left: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(242,51,50, 0.9);
    overflow-x: hidden; /* Disable horizontal scroll */
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
}

/* Content positioning inside the overlay */
.overlay-content {
    position: relative;
    top: 25%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
}

.overlay a {
    padding: 8px;
    text-decoration: none;
    font-size: 36px;
    color: #fafafa;
    display: block;
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
    color: #360302;
}

.overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
}


.logo {
    position: absolute;
    display: block;
    cursor: pointer;
    left: 50%;
    transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    z-index: 1;
    top: 2rem;
    width: 77px;
    height: 74px;
}

.social-header {
    position: absolute;
    top: auto;
    right: 0;
}

.social-media i {
    color: #c60a09;
    font-size: 1.5rem;
    text-decoration: none;
}

/* Hover effect for social media icons - credit to Ian Lunn (https://ianlunn.github.io/Hover/) */
/* Buzz Out */
@-webkit-keyframes hvr-buzz-out {
  10% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  20% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  30% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  40% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  50% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  60% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  70% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  80% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  90% {
    -webkit-transform: translateX(1px) rotate(0);
    transform: translateX(1px) rotate(0);
  }
  100% {
    -webkit-transform: translateX(-1px) rotate(0);
    transform: translateX(-1px) rotate(0);
  }
}
@keyframes hvr-buzz-out {
  10% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  20% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  30% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  40% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  50% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  60% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  70% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }

  80% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
}
  90% {
    -webkit-transform: translateX(1px) rotate(0);
    transform: translateX(1px) rotate(0);
  }
  100% {
    -webkit-transform: translateX(-1px) rotate(0);
    transform: translateX(-1px) rotate(0);
  }
}
.hvr-buzz-out {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-buzz-out:hover, .hvr-buzz-out:focus, .hvr-buzz-out:active {
  -webkit-animation-name: hvr-buzz-out;
  animation-name: hvr-buzz-out;
  -webkit-animation-duration: 0.75s;
  animation-duration: 0.75s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

#hamburger {
    font-size: 1.7rem !important;
    font-family: 'Work Sans';
    margin-left: 1rem;
}

#hero-image {
    position: relative;
    display: block;
    background: url(../images/hero-image.jpg) no-repeat center;
    background-size: cover;
    width: 100vw;
    height: 92vh;
    margin: auto;
}

.hero-text {
    text-align: center;
    /* font-family: 'Crimson Pro', serif;*/
    font-size: 2.2rem;
    font-weight: 700;
    letter-spacing: 0.2rem;
    padding-top: 12.2rem;
    color: #fafafa;
    text-shadow: 0.2rem 0.2rem #343a40;
    min-width: 100%;
    min-height: 8.5rem;
    position: relative;
    z-index: 1;
}

.hero-text::before {
    content: "";
    display: block;
    position: absolute;
    margin-left: 0;
    min-width: 100%;
    min-height: 8.5rem;
    z-index: -1;
    opacity: 0.3;
    background-color: #c60a09;
}

/* Bouncing arrow located on hero image  */
.arrow {
    position: absolute;
    left: 50%;
    bottom: 2rem;
    margin-left: -0.5rem;
    background-size: contain;
    cursor: pointer;
    color: #fafafa !important;
}
/* ... */

